finish sequencing of Clojure topics/labs?

--- a/css/site.css
+++ b/css/site.css
@@ -219,3 +219,8 @@ dt {
 	background: #9900cc;
 	color: white;
 }
+
+/* Don't add extra margins for highlight figures */
+figure.highlight {
+	margin: 0;
+}
